2007-06-25  Manuel Arostegui <marostegui@artica.es>

	* aix/pandora_agent.conf: Added missing line agent_name
	option

2007-06-25  Sancho Lerena  <slerena@artica.es>

	* linux/pandora_agent_installer: Fixed problems with old "contrib"
	subdir.
	
	* */pandora_agent: Removed from/to time run functionality. Added
	renice call, fixed some default vars and fixed DEBUG mode
	behaviour.
	
	* */pandora_agent.conf: Default are to no renice and not debug.
	
2007-06-18  Manuel Arostegui <marostegui@artica.es>

	* linux/pandora_agent_installer: Fixed a bug related
	  with the copy of the pandora_agent_daemon file.

2007-06-18  Manuel Arostegui <marostegui@artica.es>

	* linux/pandora_agents.spec: Renamed to pandora_agent.spec

	* linux/pandora_agent.spec: Ready to 1.3 version packagement.

2007-06-14  Manuel Arostegui <marostegui@artica.es>

	* linux/pandora_agent.conf: Changed to disable 
	  by default the delayed start up.
        
	* aix/pandora_agent.conf: Changed to disable
          by default the delayed start up.
        
	* solaris/pandora_agent.conf: Changed to disable
          by default the delayed start up.

2007-06-14  Manuel Arostegui <marostegui@artica.es>

	* linux/INSTALL: Added how to use the new installer.
      
	* aix/pandora_agent_installer: Changed few things
	 to make it works with the new name of the agent.
     	
	* aix/pandora_agent: This is the old pandora_agent.sh
	 which has been renamed to pandora_agent
      	
	* aix/pandora_agent_daemon: Changed few thing to make it
	 works with the new name of the agent.
      	
	* aix/INSTALL: Added how to use the new installer.

        * aix/pandora_agent.sh: Renamed to pandora_agent.
      	
	* hp-ux/pandora_agent: This is the old pandora_agent.sh
         which has been renamed to pandora_agent
      	
	* hp-ux/pandora_agent_daemon: Changed few thing to make it
         works with the new name of the agent.
      	
	* hp-ux/INSTALL: Added how to use the new installer.
      	