@@ -9,8 +9,8 @@
 
 server_ip 	192.168.50.1
 server_path 	/var/spool/pandora/data_in
-temporal    	/tmp
-logfile		/var/log/pandora_agent.log
+temporal    	/var/spool/pandora/data_out
+logfile		/var/log/pandora/pandora_agent.log
 
 # Interval in seconds, 300 by default
 interval    	300
