@@ -11,17 +11,17 @@ servername ulises
 # incomingdir:  Defines directory where incoming data packets are stored
 # You could set directory relative to base path or absolute, starting with /
 
-incomingdir /opt/pandora_server/data_in
+incomingdir /var/spool/pandora/data_in
 
 # log_file: Main logfile for pandora_server
 # You could set file relative to base path or absolute, starting with /
 
-log_file /var/log/pandora_server.log
+log_file /var/log/pandora/pandora_server.log
 
 # Error logfile: aux logfile for pandora_server errors (in Daemon mode)
 # You could set file relative to base path or absolute, starting with /
 
-errorlog_file /var/log/pandora_server.error
+errorlog_file /var/log/pandora/pandora_server.error
 
 # dbname: Database name (pandora by default
 
@@ -29,7 +29,7 @@ dbname pandora
 
 # dbuser:  Database user name (pandora by default)
 
-dbuser pandora 
+dbuser pandora
 
 # daemon: Runs in daemon mode (background) if 1, if 0 runs in foreground 
 # this could be setup on command line with -D option
