@@ -1,3 +1,7 @@
+2007-06-29  Raul Mateos  <raulofpandora@gmail.com>
+
+	* linux/pandora_agent.conf: Changed log and temp paths.
+
 2007-06-25  Manuel Arostegui <marostegui@artica.es>
 
 	* aix/pandora_agent.conf: Added missing line agent_name
